Final Commit for submission
Final Commit

--- a/Assignment 2/part2/index2.html
+++ b/Assignment 2/part2/index2.html
@@ -1,3 +1,11 @@
+ <!--
+	Name: Aaryan Desai
+	File: index2.html
+	Date: 12 February 2024
+	This assignment is basically for the Structuring the planet data in a table.
+	-->
+
+ 
  <!DOCTYPE html>
  <html lang="en">
  <head>
