--- a/Assignment 3 CSS/Part 2/index (2).html
+++ b/Assignment 3 CSS/Part 2/index (2).html
@@ -1,3 +1,11 @@
+<!--
+	Name: Aaryan Desai
+	File: index(2).html
+	Date: 29 February 2024
+	This is a assignment 3 and it has part 2 assignment of 'this is a cool box assignment'.
+-->
+
+
 <!DOCTYPE html>
 <html lang="en-US">
 
