--- a/Assignment 3 CSS/Part 3/index (3).html
+++ b/Assignment 3 CSS/Part 3/index (3).html
@@ -1,3 +1,10 @@
+<!--
+	Name: Aaryan Desai
+	File: index(3).html
+	Date: 29 February 2024
+	This is a assignment 3 and it has part 3 assignment of 'a community college website'.
+-->
+
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
